# MyReactHarmony.trial

./: .gitignore
AwesomeProject/: App.tsx  app.json  package-lock.json  package.json  react-native-oh-tpl-react-native-view-shot-3.8.0-0.2.1.tgz
AwesomeProject/views/: CustomNativeComponentTest.harmony.tsx
MyApplication/: .gitignore  oh-package.json5
MyApplication/AppScope/: app.json5
MyApplication/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
MyApplication/entry/src/main/: module.json5
MyApplication/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
MyApplication/entry/src/main/ets/: RNPackagesFactory.ts
MyApplication/entry/src/main/ets/pages/: Index.ets
